--- a/Mobile Login Page/css/style.css
+++ b/Mobile Login Page/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -14,39 +14,64 @@ body {
     font-family: sans-serif;
 }
 
+/* ----------------------------home-page----------------------- */
+
 #home-page {
     position: relative;
     width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
-#home-page::after {
+.page::before {
     content: "";
     background-color: #D9D9D9;
-    height: 10rem;
-    width: 20rem;
+    height: 9.3rem;
+    width: 21.2rem;
     display: block;
     position: absolute;
-    top: 25%;
-    left: -30%;
-    border-radius: 91.5px
+    top: 22%;
+    left: -40%;
+    border-radius: 15rem;
 }
 
-#home-page::before {
+.page::after {
+    content: "";
+    background-color: #D9D9D9;
+    height: 11rem;
+    width: 34rem;
+    display: block;
+    position: absolute;
+    top: 28%;
+    left: -45%;
+    border-radius: 9rem;
+}
+
+.psuedo-el {
+    background-color: #D9D9D9;
+    height: 14.8rem;
+    width: 34.2rem;
+    display: block;
+    position: absolute;
+    top: 40%;
+    right: -40%;
+    border-radius: 9rem;
+}
+
+.psuedo-el::before {
     content: "";
     background-color: #D9D9D9;
     height: 13rem;
-    width: 25rem;
+    width: 13rem;
     display: block;
     position: absolute;
-    top: 30%;
-    left: -20%;
-    border-radius: 91.5px
+    top: -40%;
+    right: 30%;
+    border-radius: 15rem;
 }
 
-
-
 .header {
-    padding: 1rem 2rem;
+    padding: 3rem;
 }
 
 .header_title {
@@ -63,7 +88,7 @@ body {
 
 .sign-up-home-page {
     position: absolute;
-    top: 60%;
+    top: 75%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -75,7 +100,7 @@ body {
 .sign_up_home-btn {
     font-size: 2rem;
     font-weight: 800;
-    color: #fff;
+    color: rgba(255, 255, 255, .8);
     background: #000;
     border-radius: 1.5rem;
     border: 0;
@@ -96,8 +121,89 @@ body {
     text-decoration: none;
 }
 
-#sign-up-page {
+.footer-image {
+    width: 100%;
+    height: 20vh;
+    position: absolute;
+    bottom: -3px;
+}
+
+.footer-image img {
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    object-fit: cover;
+}
+
+
+@media screen and (max-width: 900px) {
+
+    .sign-up-home-page {
+        top: 50%;
+    }
+
+    .page::before {
+        display: none;
+    }
+
+    .page::after {
+        content: "";
+        background-color: rgba(202, 213, 250, .1);
+        height: 35rem;
+        width: 35rem;
+        display: block;
+        position: absolute;
+        top: 30%;
+        left: -45%;
+        z-index: -1;
+        border-radius: 63% 37% 63% 37% / 39% 57% 43% 61%;
+    }
+
+    .psuedo-el {
+        background-color: rgba(202, 213, 250, .1);
+        height: 25rem;
+        width: 30.2rem;
+        display: block;
+        position: absolute;
+        top: 5%;
+        right: -40%;
+        z-index: -1;
+        border-radius: 63% 37% 63% 37% / 39% 57% 43% 61%;
+    }
+
+    .psuedo-el::before {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 390px) {
+    .footer-image img {
+        /* display: none; */
+    }
+
+    .page::before {
+        display: none;
+    }
+
+    .page::after {
+        display: none;
+    }
+
+    .psuedo-el {
+        display: none;
+    }
+
+    .psuedo-el::before {
+        display: none;
+    }
+}
+
+#home-page {
     display: none;
+}
+
+#sign-up-page {
+    display: block;
 }
 
 #login-page {
