--- a/Yufat Website/css/style.css
+++ b/Yufat Website/css/style.css
@@ -16,6 +16,7 @@ html {
 body {
     font-family: sans-serif;
     height: 100vh;
+    background-color: var(--color-white);
 }
 
 ul {
@@ -135,15 +136,32 @@ a {
     --color-dark-green: #364D59;
 }
 
+.dark-theme {
+    --color-black: #000;
+    --color-light-blue: #191c1e;
+    --color-light-gray: #e9e9e9;
+}
+
+body {
+    /* background: var(--color-black); */
+    color: var(--color-light-gray);
+}
+
+a{
+    color: var(--color-lighter-blue);
+}
+
+
 /* ------- HEADER SECTION ------- */
 header {
     height: 100vh;
 }
+
 /* ------- Nav Bar ------- */
 .nav_bar {
     padding: 0 10rem;
     border-bottom: 2px solid var(--primary-color);
-    position: fixed;
+    position: absolute;
     width: 100%;
     z-index: 15;
     background-color: var(--color-white);
@@ -165,7 +183,7 @@ header {
     z-index: 5;
 }
 
-.nav_links li{
+.nav_links li {
     display: inline-block;
     margin-right: 2rem;
 }
@@ -185,6 +203,17 @@ header {
 
 .nav_links li:nth-child(1) .nav_link {
     color: var(--primary-color);
+}
+
+.nav_open_close_btns {
+    font-size: 3rem;
+    color: var(--color-orange);
+    cursor: pointer;
+    display: none;
+}
+
+.nav_links.show_nav {
+    transform: translateY(0%);
 }
 
 .about-arrow {
@@ -236,22 +265,31 @@ header {
 }
 
 .modes {
+    width: 3rem;
+    height: 3rem;
     margin: 0 3.5rem 0 1.5rem;
-    font-size: 1.8rem;
     cursor: pointer;
+}
+
+.modes #theme-toggle-icon {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .btn {
     padding: 1rem 3rem;
     font-weight: bold;
-    background-image: 
-    linear-gradient(to right, #a23d21, #bb5a1d, #d07a14, #e09b06, #e9bf00);
+    background-image:
+        linear-gradient(to right, #a23d21, #bb5a1d, #d07a14, #e09b06, #e9bf00);
     color: var(--color-white);
     box-shadow: 3px 4px 9px 0px rgba(0, 0, 0, .3);
     border: none;
     border-radius: .5rem;
     cursor: pointer;
 }
+
+/* Banner Section */
 
 .banner {
     position: relative;
@@ -263,12 +301,12 @@ header {
 }
 
 .banner-content {
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    text-align: center; 
-    color: var(--color-white); 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: var(--color-white);
 }
 
 .banner-par {
@@ -320,7 +358,7 @@ header {
     color: var(--color-black);
 }
 
-.title_psuedo{
+.title_psuedo {
     position: relative;
     display: inline-block;
 }
@@ -425,7 +463,6 @@ header {
 
 /* ---------Services Section----------- */
 .services_section {
-    height: 80vh;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -525,7 +562,7 @@ header {
 /* Testimonials Section */
 
 .testimonials_section {
-    margin-top: 25rem;
+    margin: 15rem 0;
 }
 
 .testimonials_container {
@@ -566,7 +603,7 @@ header {
     left: -4rem;
 }
 
-#next_btn{
+#next_btn {
     top: 50%;
     right: -4rem;
 }
@@ -577,7 +614,8 @@ header {
 .donate_container {
     background: var(--color-lighter-blue);
     width: 100%;
-    height: 35vh;
+    /* height: 35vh; */
+    padding: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -599,13 +637,14 @@ header {
 
 /* Footer Section */
 footer {
-    height: 70vh;
+    /* height: 70vh; */
     background-color: var(--color-black);
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     margin-top: 20rem;
+    padding: 5rem;
 }
 
 .sub_footer {
@@ -651,7 +690,7 @@ footer {
     font-weight: 400;
 }
 
-.footer_contact p{
+.footer_contact p {
     font-size: 1.5rem;
     margin-bottom: 1rem;
     font-weight: bold;
@@ -661,12 +700,6 @@ footer {
 .footer_contact p i {
     color: var(--primary-color);
     margin-right: .7rem;
-}
-
-.footer_images {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
 }
 
 .footer_yufat_name {
@@ -698,6 +731,7 @@ footer {
 .about_header {
     height: 40vh;
 }
+
 .about_banner {
     height: 100%;
     position: relative;
@@ -738,7 +772,7 @@ footer {
 
 .techLeap_text_container {
     background: url(../assets/Services-images/services-techLeap-image.png);
-    height: 50vh;
+    /* height: 50vh; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -765,7 +799,7 @@ footer {
 }
 
 .techLeap_packages_box {
-    width: 50%;
+    width: 70%;
     text-align: center;
 }
 
@@ -804,19 +838,19 @@ footer {
     background-size: cover;
 }
 
-.grid-container{
-	width: 80%;
-	margin: 10rem auto;
-	display: grid;
-	gap: 1rem;
-	grid-template-columns: repeat(3, 1fr);
+.grid-container {
+    width: 80%;
+    margin: 10rem auto;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
 }
 
-.grid-item{
-	cursor: pointer;
-	transition: .3s ease;
-	overflow: hidden;
-	position: relative;
+.grid-item {
+    cursor: pointer;
+    transition: .3s ease;
+    overflow: hidden;
+    position: relative;
 }
 
 .grid-item-2 {
@@ -835,35 +869,21 @@ footer {
     grid-column: span 3;
 }
 
-.img-container{
-	width: 100%;
-	height: 40rem;
+.img-container {
+    width: 100%;
+    height: 40rem;
 }
 
-.img-container img{
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	transition: .3s all;
+.img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .3s all;
 }
 
-.img-container img:hover{
-	transform: scale(1.1);
+.img-container img:hover {
+    transform: scale(1.1);
 }
-
-
-@media (max-width: 60rem) {
-	.grid-container{
-		grid-template-columns: repeat(3, 1fr);
-	}
-
-	.grid-item-3, .grid-item-5, .grid-item-10{
-		grid-row: span 2;
-	}
-}
-
-
-
 
 /* Contact Page */
 
@@ -918,7 +938,7 @@ footer {
 }
 
 .form_btn {
-    background-color: var(--primary-color)!important;
+    background-color: var(--primary-color) !important;
     color: var(--color-white);
     padding: 1rem;
     border-radius: .5rem;
@@ -932,7 +952,7 @@ footer {
 }
 
 .form_btn:hover {
-    background-color: var(--color-orange)!important;
+    background-color: var(--color-orange) !important;
 }
 
 
@@ -967,4 +987,467 @@ footer {
     color: var(--color-white);
     margin-bottom: 1rem;
     font-weight: 500;
+}
+
+
+
+/* Media Queries */
+
+/* Styles for desktop and larger screens */
+@media screen and (max-width: 1200px) {
+
+    /* Nav Bar */
+    .nav_bar {
+        padding: 2rem;
+    }
+
+    .nav_links {
+        background-color: rgba(59, 8, 76, .7);
+        backdrop-filter: blur(50px);
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100vh !important;
+        text-align: center;
+        padding-top: 10rem;
+        transition: .3s all;
+        transform: translateY(-100%);
+    }
+
+    .drop_down_menu {
+        display: none;
+    }
+
+    .about-arrow {
+        display: none;
+    }
+
+    .nav_links li {
+        display: block;
+    }
+
+    .nav_links li .nav_link {
+        color: var(--color-white);
+        font-size: 2rem;
+    }
+
+    .nav_open_close_btns {
+        font-size: 3rem;
+        color: var(--color-orange);
+        cursor: pointer;
+        display: block;
+        margin-left: 3rem;
+    }
+
+    #close {
+        position: absolute;
+        right: 3rem;
+        top: 1rem;
+        font-size: 3rem;
+        color: var(--color-light-blue);
+        z-index: 50;
+    }
+
+    /* Banner */
+    .banner-title {
+        font-size: 3rem;
+    }
+
+    /* Welcome Section */
+    .welcome_section {
+        width: 80%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .welcome_text_content {
+        margin-bottom: 2rem;
+    }
+
+    .welcome_image_container {
+        width: 25rem;
+        height: 25rem;
+        margin: 5rem 0 0 3rem;
+    }
+
+    /* Causes */
+    .causes_card_container {
+        flex-direction: column;
+    }
+
+    .causes_section {
+        height: 90vh;
+    }
+
+    .causes_card:nth-child(1) {
+        margin: 0 0 0 0;
+    }
+
+    .causes_card:nth-child(2) {
+        margin: 3rem 0 0 0;
+    }
+
+    .causes_card {
+        width: 100%;
+    }
+
+    /* Services Section */
+    .main_section_title {
+        margin-bottom: 5rem;
+    }
+
+    .main_section_title_bg {
+        width: 30rem;
+    }
+
+    .main_section_title_bg img {
+        width: 100%;
+    }
+
+    .main_section_title_text {
+        font-size: 2rem;
+    }
+
+
+    /* Footer Section */
+    footer {
+        justify-content: center;
+        align-items: center;
+        margin-top: 15rem;
+    }
+
+    .sub_footer {
+        width: 90%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3rem;
+        color: var(--color-white);
+        margin-bottom: 5rem;
+    }
+
+    .footer_column_text {
+        font-size: 1.4rem;
+    }
+
+    .footer_links li {
+        margin: 0 0 2.5rem 0;
+    }
+
+    .footer_images {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .footer_yufat_name {
+        bottom: 5rem;
+        left: 20%;
+        font-size: 1.5rem;
+        width: 30rem;
+    }
+
+     /* Services Page */
+     .services_section {
+        margin-top: 10rem;
+    }
+
+     .techLeap_section {
+        margin-bottom: 5rem;
+    }
+
+     .techLeap_text_container p {
+        width: 80%;
+    }
+
+    .techLeap_packages_container {
+        gap: 5rem;
+    }
+
+    .techLeap_packages_box {
+        width: 100%;
+    }
+    
+    .techLeap_packages_box img {
+        margin: 1rem;
+    }
+    
+    .techLeap_package_title {
+        font-size: 2.4rem;
+        color: var(--color-light-gray);
+    }
+    
+    .techLeap_package_text {
+        font-size: 1.6rem;
+        color: var(--color-black);
+        margin-top: 1rem;
+        line-height: 1.2;
+    }
+    
+    .digital_boda_packages_container {
+        width: 90%;
+    }
+
+    /* Gallery Page */
+    .grid-container {
+        width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    .grid-item {
+        cursor: pointer;
+        transition: .3s ease;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .grid-item-2 {
+        grid-column: span 1;
+    }
+
+    .grid-item-6 {
+        grid-column: span 1;
+    }
+    
+    .grid-item-7 {
+        grid-column: span 2;
+    }
+    
+    .grid-item-8 {
+        grid-column: span 1;
+    }
+    
+    .img-container {
+        width: 100%;
+        height: 40rem;
+    }
+
+    /* Contact Page */
+    .form_container {
+        grid-template-columns: repeat(1, 1fr);
+        width: 80%;
+    }
+
+    .form_contact_details {
+        grid-template-columns: repeat(3, 1fr);
+        width: 95%;
+    }
+    
+}
+
+
+/* Styles for tablets */
+@media screen and (max-width: 768px) {
+    .nav_bar {
+        padding: 1rem 2rem;
+    }
+
+    .navBar_logo {
+        width: 5rem;
+        height: 5rem;
+    }
+
+    .modes {
+        margin: 0 1rem 0 1.5rem;
+        font-size: 1.8rem;
+        cursor: pointer;
+    }
+
+    .nav_donate_btn {
+        display: none;
+    }
+
+
+    /* Banner Section */
+    .banner-content {
+        top: 53%;
+    }
+
+    .banner-par {
+        font-size: 1.5rem;
+    }
+
+    .banner-title {
+        font-size: 2.7rem;
+    }
+
+    .banner-btn {
+        padding: 1.2rem 3.2rem;
+    }
+
+    .banner-btn:hover {
+        background-color: var(--primary-color);
+    }
+
+    .banner-down-arrow {
+        font-size: 3rem;
+        bottom: 1rem;
+    }
+
+    /* Welcome Section */
+    .welcome_image_container {
+        width: 20rem;
+        height: 20rem;
+        margin: 5rem 0 0 3rem;
+    }
+
+    /* Causes */
+    .causes_card_container {
+        width: 90%;
+    }
+
+    .causes_section {
+        height: 100vh;
+    }
+
+    .causes_card {
+        width: 100%;
+    }
+
+
+    /* Services Section */
+    .services_cards_container {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .services_card {
+        width: 100%;
+        margin-bottom: 3rem;
+    }
+
+    /* testimonials Section */
+    .testimonials_container {
+        width: 95%;
+    }
+
+    .testimonial_image {
+        width: 9rem;
+        height: 9rem;
+        margin: 0 auto;
+    }
+
+    .testimonial_image img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .testimonial_name {
+        font-size: 2rem;
+    }
+
+    .testimonial_description {
+        font-size: 1.7rem;
+    }
+
+    .testimonials_control_arrows {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%);
+    }
+
+    #prev_btn {
+        margin-top: 1rem;
+        font-size: 3rem;
+    }
+
+    #next_btn {
+        margin-top: 1rem;
+        font-size: 3rem;
+    }
+
+    /* Donate Section */
+    .donate_text {
+        font-size: 2rem;
+    }
+
+    .donate_btn {
+        padding: 1.3rem 4rem;
+        font-size: 1.4rem;
+        box-shadow: 3px 4px 9px 0px rgba(0, 0, 0, .3);
+    }
+
+
+     /* Footer Section */
+     footer {
+        padding: 3rem 1rem;
+     }
+
+    .sub_footer {
+        width: 100%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .footer_quick_links {
+        margin-left: 0;
+    }
+    
+    .footer_yufat_name {
+        bottom: 3rem;
+        left: 50%;
+        font-size: 1rem;
+        width: 25rem;
+    }
+
+    /* Services Page */
+    .techLeap_text_container p {
+        width: 95%;
+        font-size: 1.6rem;
+    }
+
+    /* Contact Page*/
+    .form_contact_details {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
+/* Styles for smartphones */
+@media screen and (max-width: 560px) {
+    /* Causes Section */
+    .causes_section {
+        height: 130vh;
+    }
+
+    /* Services Section*/
+    .techLeap_packages_container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    /* Gallery Page*/
+    .grid-container {
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .grid-item-7 {
+        grid-column: span 1;
+    }
+
+    /* Contact Page*/
+    .form_contact_details {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+
+@media screen and (max-width: 360px) {
+    /* Causes Section */
+    .causes_section {
+        height: 190vh;
+    }
+
+    /* Services Page */
+    .techLeap_package_image img {
+        width: 35%;
+    }
+}
+
+@media screen and (max-width: 230px) {
+    .footer_images {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .causes_section {
+        height: 220vh;
+    }
 }
