--- a/Yufat Website/css/style.css
+++ b/Yufat Website/css/style.css
@@ -192,7 +192,7 @@ header {
     font-size: 1.4rem;
     font-family: 'Inter', sans-serif;
     font-weight: bold;
-    color: var(--color-black);
+    color: var(--color-orange);
     padding: 3.5rem .5rem;
     transition: .2s ease-out;
 }
