--- a/Yufat Website/css/style.css
+++ b/Yufat Website/css/style.css
@@ -147,7 +147,7 @@ body {
     color: var(--color-light-gray);
 }
 
-a{
+a {
     color: var(--color-lighter-blue);
 }
 
@@ -165,6 +165,7 @@ header {
     width: 100%;
     z-index: 15;
     background-color: var(--color-white);
+
 }
 
 .navBar_logo {
@@ -214,6 +215,7 @@ header {
 
 .nav_links.show_nav {
     transform: translateY(0%);
+    display: block;
 }
 
 .about-arrow {
@@ -269,6 +271,22 @@ header {
     height: 3rem;
     margin: 0 3.5rem 0 1.5rem;
     cursor: pointer;
+}
+
+.about_dark {
+    display: none;
+}
+
+.gallery_dark {
+    display: none;
+}
+
+.contact_dark {
+    display: none;
+}
+
+.services_dark {
+    display: none;
 }
 
 .modes #theme-toggle-icon {
@@ -430,6 +448,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 70%;
+    /* height: 100vh; */
 }
 
 .causes_card {
@@ -566,9 +585,35 @@ header {
 }
 
 .testimonials_container {
-    width: 45%;
+    width: 50%;
     text-align: center;
     position: relative;
+    overflow: hidden;
+    position: relative;
+}
+
+.testimonial_arrow_icon {
+    color: var(--primary-color);
+}
+
+.swiper-pagination {
+    margin-top: 2rem;
+    position: absolute;
+    bottom: -6rem;
+}
+
+.testimonial_image {
+    width: 13rem;
+    height: 13rem;
+    margin: 0 auto;
+}
+
+.testimonial_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    /* border: 3px solid var(--primary-color); */
 }
 
 .testimonial_name {
@@ -582,6 +627,7 @@ header {
     font-size: 2rem;
     color: var(--color-gray);
     line-height: 1.4;
+    margin-bottom: 2rem;
 
 }
 
@@ -1013,6 +1059,7 @@ footer {
         padding-top: 10rem;
         transition: .3s all;
         transform: translateY(-100%);
+        display: none;
     }
 
     .drop_down_menu {
@@ -1144,16 +1191,16 @@ footer {
         width: 30rem;
     }
 
-     /* Services Page */
-     .services_section {
+    /* Services Page */
+    .services_section {
         margin-top: 10rem;
     }
 
-     .techLeap_section {
+    .techLeap_section {
         margin-bottom: 5rem;
     }
 
-     .techLeap_text_container p {
+    .techLeap_text_container p {
         width: 80%;
     }
 
@@ -1164,23 +1211,23 @@ footer {
     .techLeap_packages_box {
         width: 100%;
     }
-    
+
     .techLeap_packages_box img {
         margin: 1rem;
     }
-    
+
     .techLeap_package_title {
         font-size: 2.4rem;
         color: var(--color-light-gray);
     }
-    
+
     .techLeap_package_text {
         font-size: 1.6rem;
         color: var(--color-black);
         margin-top: 1rem;
         line-height: 1.2;
     }
-    
+
     .digital_boda_packages_container {
         width: 90%;
     }
@@ -1190,14 +1237,14 @@ footer {
         width: 90%;
         grid-template-columns: repeat(2, 1fr);
     }
-    
+
     .grid-item {
         cursor: pointer;
         transition: .3s ease;
         overflow: hidden;
         position: relative;
     }
-    
+
     .grid-item-2 {
         grid-column: span 1;
     }
@@ -1205,15 +1252,15 @@ footer {
     .grid-item-6 {
         grid-column: span 1;
     }
-    
+
     .grid-item-7 {
         grid-column: span 2;
     }
-    
+
     .grid-item-8 {
         grid-column: span 1;
     }
-    
+
     .img-container {
         width: 100%;
         height: 40rem;
@@ -1229,7 +1276,7 @@ footer {
         grid-template-columns: repeat(3, 1fr);
         width: 95%;
     }
-    
+
 }
 
 
@@ -1367,10 +1414,10 @@ footer {
     }
 
 
-     /* Footer Section */
-     footer {
+    /* Footer Section */
+    footer {
         padding: 3rem 1rem;
-     }
+    }
 
     .sub_footer {
         width: 100%;
@@ -1380,7 +1427,7 @@ footer {
     .footer_quick_links {
         margin-left: 0;
     }
-    
+
     .footer_yufat_name {
         bottom: 3rem;
         left: 50%;
@@ -1403,10 +1450,6 @@ footer {
 
 /* Styles for smartphones */
 @media screen and (max-width: 560px) {
-    /* Causes Section */
-    .causes_section {
-        height: 130vh;
-    }
 
     /* Services Section*/
     .techLeap_packages_container {
@@ -1427,13 +1470,31 @@ footer {
     .form_contact_details {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    /* Testimonials */
+    .testimonial_arrow_icon {
+        display: none;
+    }
 }
 
 
+@media screen and (max-width: 500px) {
+    .causes_section {
+        height: 125vh;
+    }
+}
+
+
+
 @media screen and (max-width: 360px) {
+
     /* Causes Section */
     .causes_section {
-        height: 190vh;
+        height: 130vh;
+    }
+    .causes_card {
+        height: 50vh;
+        overflow-y: scroll;
     }
 
     /* Services Page */
@@ -1445,9 +1506,5 @@ footer {
 @media screen and (max-width: 230px) {
     .footer_images {
         grid-template-columns: repeat(1, 1fr);
-    }
-
-    .causes_section {
-        height: 220vh;
     }
 }
